test: Add comprehensive unit tests for JwtService, AuthService, FileParsingService, IngestionService, and LogImportService